--- a/src/lib/wdg/button/button-default.css
+++ b/src/lib/wdg/button/button-default.css
@@ -1,14 +1,12 @@
 a.wtag-button {
-    display: inline-block;
+    position: relative;
+    display: inline-table;
+    display: inline-flex;
+    align-items: center;
     text-decoration: none;
     padding: .5em;
     cursor: pointer;
     width: auto;
-    background-color: #06C;
-    background-image: linear-gradient(center top , #08B, #002);
-    background-image: -moz-linear-gradient(center top , #08B, #002);
-    background-image: -webkit-linear-gradient(center top , #08B, #002);
-    background-image: -ms-linear-gradient(center top , #08B, #002);
     color: #fff;
     text-shadow: 1px 1px #000;
     border: 2px solid #000;
@@ -20,7 +18,31 @@ a.wtag-button {
     transition: all .2s;
     -webkit-transition: all .2s;
     -ms-transition: all .2s;
+    justify-content: center;
+    background-color: #06C;
+    background-image: linear-gradient(center top , #08B, #002);
+    background-image: -moz-linear-gradient(center top , #08B, #002);
+    background-image: -webkit-linear-gradient(center top , #08B, #002);
+    background-image: -ms-linear-gradient(center top , #08B, #002);
 }
+
+a.wtag-button::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 50%;
+    background: rgba(255,255,255,.4);
+}
+
+a.wtag-button > div.container {
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+    align-self: center;
+}
+
 
 a.wtag-button:active {
     transform: translateX(.5em) translateY(.5em);
@@ -30,8 +52,15 @@ a.wtag-button:active {
     box-shadow: 0 0 0 rgba(0,0,0,.4);
 }
 
-a.wtag-button.red,
-a[data-checked="1"].wtag-button {
+a.wtag-button.light {
+    background-color: #edc;
+    background-image: linear-gradient(center top , #dcb, #a98);
+    background-image: -moz-linear-gradient(center top , #DBC, #A98);
+    background-image: -webkit-linear-gradient(center top , #DBC, #A98);
+    background-image: -ms-linear-gradient(center top , #DBC, #A98);
+}
+
+a.wtag-button.red {
     background-color: #C60;
     background-image: linear-gradient(center top , #B00, #200);
     background-image: -moz-linear-gradient(center top , #B00, #200);
@@ -40,21 +69,11 @@ a[data-checked="1"].wtag-button {
     box-shadow: .5em .5em 2px rgba(50,0,0,.4), 0 0 .2em rgba(255,255,255,.7) inset;
 }
 
-a.wtag-button.green,
-a[data-checked="1"].wtag-button {
+a.wtag-button.green {
     background-color: #0C6;
     background-image: linear-gradient(center top , #0B0, #020);
     background-image: -moz-linear-gradient(center top , #0B0, #020);
     background-image: -webkit-linear-gradient(center top , #0B0, #020);
     background-image: -ms-linear-gradient(center top , #0B0, #020);
     box-shadow: .5em .5em 2px rgba(0,50,0,.4), 0 0 .2em rgba(255,255,255,.7) inset;
-}
-
-a[data-checked="0"].wtag-button {
-    background-color: #655;
-    background-image: linear-gradient(center top , #877, #522);
-    background-image: -moz-linear-gradient(center top , #877, #522);
-    background-image: -webkit-linear-gradient(center top , #877, #522);
-    background-image: -ms-linear-gradient(center top , #877, #522);
-    color: #ccc
 }
