Added the ability to get images dimensions. Work in progress on widget <w:Img>.

--- a/src/lib/wdg/img/img-default.css
+++ b/src/lib/wdg/img/img-default.css
@@ -11,3 +11,11 @@ div.wtag-img {
     padding: 0;
     margin: 0;
 }
+
+div.wtag-img {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
