--- a/src/lib/cls/WTag.css
+++ b/src/lib/cls/WTag.css
@@ -1,3 +1,17 @@
+* { 
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 *.wtag-hidden.wtag-hidden2.wtag-hidden3 {
     display: none;
+}
+
+*.expand {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
 }
