--- a/src/lib/wdg/flex/flex-default.css
+++ b/src/lib/wdg/flex/flex-default.css
@@ -3,6 +3,14 @@
     align-items: stretch;
 }
 
+.wtag-flex.expand {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+
 .wtag-flex > * {
     flex: 1 1 auto;
     flex: 1 1 main-size;
