--- a/src/lib/wdg/stack/stack-defaul.css
+++ b/src/lib/wdg/stack/stack-defaul.css
@@ -4,4 +4,13 @@
     top: 0;
     width: 100%;
     height: 100%;
+    overflow: auto;
+}
+
+.wtag-stack.crop > * {
+    overflow: hidden;
+}
+
+.wtag-stack > *.crop {
+    overflow: hidden;
 }
