--- a/src/lib/wdg/book/book-default.css
+++ b/src/lib/wdg/book/book-default.css
@@ -1,3 +1,27 @@
+div.wtag-book > * {
+  position: absolute;
+  display: block;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  overflow: hidden;
+}
+
+div.wtag-book {
+  position: relative;
+  padding: 0;
+  display: block;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+
+
+
 @keyframes wtag-book-slide-to-right {
     from {transform: translateX(0)}
     to {transform: translateX(100%)}
