--- a/src/lib/cls/WTag.css
+++ b/src/lib/cls/WTag.css
@@ -15,3 +15,12 @@
     width: 100%;
     height: 100%;
 }
+
+body, html {
+    margin: 0;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
