--- a/src/lib/wdg/book/book-default.css
+++ b/src/lib/wdg/book/book-default.css
@@ -1,10 +1,16 @@
 div.wtag-book {
-  position: static;
+  position: relative;
   padding: 0;
   display: block;
   overflow: hidden;
   width: 100%;
   height: 100%;
+}
+
+div.wtag-book.expand {
+  position: absolute;
+  left: 0;
+  top: 0;
 }
 
 div.wtag-book > * {
@@ -20,6 +26,10 @@ div.wtag-book > * {
 
 div.wtag-book > *:not(.hidden) {
   display: block;
+}
+
+div.wtag-book > *.wtag-flex:not(.hidden) {
+  display: flex;
 }
 
 div.wtag-book > *.hidden {
