--- a/ker/com/x-row/x-row.com.css
+++ b/ker/com/x-row/x-row.com.css
@@ -3,6 +3,11 @@
     border-collapse: collapse;
 }
 
+.x-row[fullwidth] {
+    width: 100%;
+}
+
+.x-row[fill],
 .x-row.fill {
     position: absolute;
     left: 0;
@@ -26,11 +31,13 @@
     vertical-align: middle;
 }
 
-.x-row.horizontal > div {
+.x-row[dir=horizontal] > div,
+.x-row[orientation=horizontal] > div {
     display: contents;
 }
 
-.x-row.vertical > div {
+.x-row[dir=vertical] > div,
+.x-row[orientation=vertical] > div {
     display: table-row;
 }
 
