--- a/ker/mod/wdg.text.css
+++ b/ker/mod/wdg.text.css
@@ -20,7 +20,7 @@ div.wdg-text > div.datalist {
     padding: 0;
     margin: 0;
     border: 1px solid #000;
-    max-height: 10em;
+    max-height: 9em;
     overflow: auto;
     z-index: 999;
 }
@@ -36,12 +36,14 @@ div.wdg-text > div.datalist > div:hover {
 div.wdg-text > div.datalist > div {
     display: block;
     margin: 0;
-    font-size: .75em;
+    font-size: 1em;
     line-height: 1.5em;
+    height: 1.5em;
     white-space: nowrap;
     padding: 0 1em;
     color: #444;
     cursor: pointer;
+    box-shadow: 0 1px 0 #ddd;
 }
 
 div.wdg-text > div.datalist > div b {
