--- a/ker/mod/dom.css
+++ b/ker/mod/dom.css
@@ -1,4 +1,4 @@
-.dom {
+.dom, .dom * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -14,4 +14,87 @@
 
 .dom.hide {
     display: none;
+}
+
+
+/* Elevations: https://material.google.com/what-is-material/elevation-shadows.html#elevation-shadows-elevation-android- */
+
+.elevation-0 {
+    box-shadow: none;
+    z-index: 0;
+}
+
+.elevation-1 {
+    box-shadow: 0 .5px 1px rgba(0,0,0,.4);
+    transform: translateY(-.5px);
+    z-index: 1;
+}
+
+.elevation-2 {
+    box-shadow: 0 1px 2px rgba(0,0,0,.4);
+    transform: translateY(-1px);
+    z-index: 2;
+}
+
+.elevation-3 {
+    box-shadow: 0 1.5px 3px rgba(0,0,0,.4);
+    transform: translateY(-1.5px);
+    z-index: 3;
+}
+
+.elevation-4 {
+    box-shadow: 0 2px 4px rgba(0,0,0,.4);
+    transform: translateY(-2px);
+    z-index: 4;
+}
+
+.elevation-6 {
+    box-shadow: 0 3px 6px rgba(0,0,0,.4);
+    transform: translateY(-3px);
+    z-index: 6;
+}
+
+.elevation-8 {
+    box-shadow: 0 4px 8px rgba(0,0,0,.4);
+    transform: translateY(-4px);
+    z-index: 8;
+}
+
+.elevation-9 {
+    box-shadow: 0 4.5px 9px rgba(0,0,0,.4);
+    transform: translateY(-4.5px);
+    z-index: 9;
+}
+
+.elevation-12 {
+    box-shadow: 0 6px 12px rgba(0,0,0,.4);
+    transform: translateY(-6px);
+    z-index: 12;
+}
+
+.elevation-16 {
+    box-shadow: 0 8px 16px rgba(0,0,0,.4);
+    transform: translateY(-8px);
+    z-index: 16;
+}
+
+.elevation-24 {
+    box-shadow: 0 12px 24px rgba(0,0,0,.4);
+    transform: translateY(-12px);
+    z-index: 24;
+}
+
+.dom.fullscreen,
+.fullscreen {
+    position: fixed;
+    left: 3vw;
+    top: 3vh;
+    bottom: 3vh;
+    right: 3vw;
+    width: 94vw;
+    height: 94vh;
+    margin: 0;
+    box-shadow: 0 12px 24px rgba(0,0,0,.4);
+    transform: translateY(-1.5vh);
+    z-index: 999999;
 }
