--- a/ker/mod/wdg.button.css
+++ b/ker/mod/wdg.button.css
@@ -1,5 +1,4 @@
-a.wdg-button,
-button.wdg-button {
+.wdg-button {
     vertical-align: middle;
     position: relative;
     display: inline-block;
@@ -9,7 +8,7 @@ button.wdg-button {
     background: #9cd;
     color: #000;
     text-decoration: none;
-    border-radius: 1em;
+    border-radius: 2px;
     text-shadow: none;
     cursor: pointer;
     margin: 4px 4px;
@@ -17,39 +16,39 @@ button.wdg-button {
     white-space: nowrap;
     overflow: hidden;
     font-size: 100%;
-    box-shadow: 3px 3px rgba(127,127,127,.5);
     min-width: 64px;
-    transform: translate(0,0);
     transition: all .2s;
     text-align: center;
     border: none;
 }
 
-a.wdg-button > *,
-button.wdg-button > * {
+.wdg-button:hover {
+    -o-filter: saturate(200%);
+    -ms-filter: saturate(200%);
+    -webkit-filter: saturate(200%);
+    filter: saturate(200%);
+}
+
+.wdg-button > * {
     vertical-align: middle;
     display: inline-block;
 }
 
 
-a.wdg-button > .wdg-icon,
-button.wdg-button > .wdg-icon {
+.wdg-button > .wdg-icon {
     margin: 0 .5em 0 -.5em;
 }
 
-a.wdg-button.wide,
-button.wdg-button.wide {
+.wdg-button.wide {
     display: block;
     width: 100%;
 }
 
-a.wdg-button.hide,
-button.wdg-button.hide {
+.wdg-button.hide {
     display: none;
 }
 
-a.wdg-button.small,
-button.wdg-button.small {
+.wdg-button.small {
     font-size: 70%;
     padding: 0 .5em;
     margin: 0;
@@ -57,22 +56,8 @@ button.wdg-button.small {
     min-width: 2em;
 }
 
-a.wdg-button.press,
-button.wdg-button.press {
-    box-shadow: 0px 0px rgba(127,127,127,.5);
-    transform: translate(2px,2px);
-    transition: all .2s;
-}
-
-a.wdg-button[disabled=yes].press,
-button.wdg-button[disabled=yes].press {
-    transform: translate(0,0);
-}
-
-a.wdg-button[disabled=yes]:hover,
-a.wdg-button[disabled=yes],
-button.wdg-button[disabled=yes]:hover,
-button.wdg-button[disabled=yes] {
+.wdg-button[disabled=yes]:hover,
+.wdg-button[disabled=yes] {
     text-decoration: none;
     cursor: default;
     background: #888;
@@ -82,24 +67,20 @@ button.wdg-button[disabled=yes] {
     font-style: italic;
 }
 
-a.wdg-button.shadow,
-button.wdg-button.shadow {
+.wdg-button.shadow {
     background-color: #69A;
 }
 
-a.wdg-button.warning,
-button.wdg-button.warning {
+.wdg-button.warning {
     background-color: #c50;
     color: #fff;
 }
 
-a.wdg-button.special,
-button.wdg-button.special {
+.wdg-button.special {
     background-color: #9d7;
 }
 
-a.wdg-button.simple,
-button.wdg-button.simple {
+.wdg-button.simple {
     color: #69b;
     border-radius: none;
     background: none;
@@ -108,13 +89,11 @@ button.wdg-button.simple {
     font-size: 100%;
 }
 
-a.wdg-button.simple:hover,
-button.wdg-button.simple:hover {
+.wdg-button.simple:hover {
     text-decoration: underline;
 }
 
-a.wdg-button:focus,
-button.wdg-button:focus {
+.wdg-button:focus {
     text-decoration: underline;
     text-decoration-style: dotted;
 }
