--- a/ker/mod/dom.css
+++ b/ker/mod/dom.css
@@ -1,4 +1,4 @@
-.dom, .dom * {
+*, .dom, .dom * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -23,14 +23,26 @@
     display: none;
 }
 
+/*****************/
+/* Default theme */
+
+html, body {
+    height: 100%;
+}
+
+body {
+    font-size: 16px;
+    background-color: #eee;
+}
+
 .label {
     color: #468;
     font-family: sans-serif;
-    font-size: 75%;
     white-space: nowrap;
     text-overflow: ellipsis;
     font-variant: small-caps;
 }
+
 
 
 /* Elevations: https://material.google.com/what-is-material/elevation-shadows.html#elevation-shadows-elevation-android- */
@@ -98,19 +110,4 @@
     box-shadow: 0 12px 24px rgba(0,0,0,.4);
     transform: translateY(-12px);
     z-index: 24;
-}
-
-.dom.fullscreen,
-.fullscreen {
-    position: fixed;
-    left: 3vw;
-    top: 3vh;
-    bottom: 3vh;
-    right: 3vw;
-    width: 94vw;
-    height: 94vh;
-    margin: 0;
-    box-shadow: 0 12px 24px rgba(0,0,0,.4);
-    transform: translateY(-1.5vh);
-    z-index: 999999;
 }
