--- a/ker/mod/wdg.text.css
+++ b/ker/mod/wdg.text.css
@@ -2,10 +2,10 @@ div.wdg-text {
     position: relative;
     display: inline-block;
     width: auto;
-    height: 3em;
+    height: 3rem;
     padding: 0;
-    margin: .5em;
-    font-size: 1em;
+    margin: .5rem;
+    font-size: 1rem;
     vertical-align: middle;
     background-color: #fff;
 }
@@ -17,14 +17,14 @@ div.wdg-text > div.datalist {
     background: #fff;
     padding: 0;
     margin: 0;
-    max-height: 9em;
+    max-height: 9rem;
     overflow: auto;
     z-index: 999;
-    top: 4em;
+    top: 4rem;
 }
 
 div.wdg-text.no-label > div.datalist {
-    top: 3em;
+    top: 3rem;
 }
 
 
@@ -44,11 +44,11 @@ div.wdg-text > div.datalist:hover > div:hover {
 div.wdg-text > div.datalist > div {
     display: block;
     margin: 0;
-    font-size: 1em;
-    line-height: 1.5em;
-    height: 1.5em;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    height: 1.5rem;
     white-space: nowrap;
-    padding: 0 1em;
+    padding: 0 1rem;
     color: #444;
     cursor: pointer;
     box-shadow: 0 1px 0 #ddd;
@@ -65,7 +65,7 @@ div.wdg-text > div.datalist > div b {
 
 
 div.wdg-text.no-label {
-    height: 2em;
+    height: 2rem;
 }
 
 div.wdg-text.wide {
@@ -77,16 +77,26 @@ div.wdg-text > * {
     display: block;
     margin: 0;
     width: 100%;
-    font-size: 1em;
+    font-size: 1rem;
 }
 
 div.wdg-text > input {
-    height: 2em;
+    height: 2rem;
     box-shadow: none;
-    padding: 0 .5em;
+    padding: 0 .5rem;
     background-color: #fff;
     border: none;
     color: #000;
+}
+
+div.wdg-text > input:focus {
+    background-color: #ffc;
+}
+
+div.wdg-text.no-valid > input,
+div.wdg-text.no-valid > input:focus {
+    background-color: #fdd;
+    color: red;
 }
 
 div.wdg-text > input[disabled] {
@@ -104,7 +114,7 @@ div.wdg-text.no-label > div.label {
 
 div.wdg-text > div.label {
     vertical-align: bottom;
-    line-height: 1.5em;
-    height: 1.5em;
-    padding: 0 .75em;
+    line-height: 1rem;
+    height: 1rem;
+    padding: 0 .75rem;
 }
