--- a/ker/mod/wdg.wysiwyg.css
+++ b/ker/mod/wdg.wysiwyg.css
@@ -5,7 +5,7 @@
     align-items: stretch;
     position: relative;
     border: none;
-    width: 100%;
+    width: auto;
     min-width: 240px;
     min-height: 180px;
     font-size: 1em;
@@ -14,7 +14,7 @@
     color: #000;
 }
 
-.wdg-wysiwyg > * {
+.wdg-wysiwyg > div {
     display: block;
     position: relative;
     width: 100%;
@@ -28,6 +28,16 @@
     padding: 0 
 }
 
+.wdg-wysiwyg > div.header > * {
+    margin: 0;
+}
+
+.wdg-wysiwyg > div.header > span {
+    padding-left: 1rem;
+}
+
+
+
 .wdg-wysiwyg > .slider {
     height: 4px;
     margin: 5px 3px 2px 3px;
@@ -38,8 +48,40 @@
 }
 
 .wdg-wysiwyg > .menu {
-
+    background-color: #9cd;
+    margin: 0;
+    padding: .25rem;
 }
+
+.wdg-wysiwyg > .menu > * {
+    display: inline-block;
+    margin: 0;
+}
+
+.wdg-wysiwyg > .menu > .icon {
+    width: 2rem;
+    height: 2rem;
+    cursor: pointer;
+    transition: all .2s;
+    transform: scale(1) translateY(0);
+}
+
+.wdg-wysiwyg > .menu > .icon.down {
+    transition: all .2s;
+    transform: scale(1.2) translateY(-4px);
+}
+
+.wdg-wysiwyg > .menu > div.sep {
+    margin: 0 .5rem;
+    font-size: 0;
+    width: 1px;
+    height: 2rem;
+    vertical-align: middle;
+    background: -webkit-linear-gradient(to bottom, rgba(0,0,0,0), #000, rgba(0,0,0,0));
+    background: linear-gradient(to bottom, rgba(0,0,0,0), #000, rgba(0,0,0,0));
+}
+
+
 
 .wdg-wysiwyg > .body {
     flex: 1 0;
