--- a/ker/mod/wdg.button.css
+++ b/ker/mod/wdg.button.css
@@ -15,7 +15,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
-    font-size: 100%;
+    font-size: 1rem;
     min-width: 64px;
     transition: all .2s;
     text-align: center;
@@ -33,7 +33,8 @@
 
 .wdg-button > * {
     vertical-align: middle;
-    display: inline-block;
+    display: block;
+    float: left;
 }
 
 
@@ -41,7 +42,7 @@
     margin: 0 .5rem 0 -.5rem;
 }
 
-.wdg-button.wide {
+a.wdg-button.wide, button.wdg-button.wide {
     display: block;
     width: 100%;
 }
